--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --color: #3BD6FF;
+  --color-2: #6CADDF;
+  --color-3: #001838;
+  --color-4: #FF9700;
+  --grey-0: #FFFFFF;
+  --grey-100: #F6F6F6;
+  --grey-200: #EEEEEE;
+  --grey-300: #E6E6E6;
+  --grey-500: #868686;
+  --grey-700: #515151;
+  --grey-1000: #000000;
+  --background: #FFFFFF;
+  --background-2: #F5F5F5;
 }
